tests/ucc/bind/good/redef-diff-scope.c
int a;
int a = 0;
int main(void)
{
    int a = 4;

    a += 0;

    return a;
}
