tests/ucc/bind/bad/redef-same-scope.c
int a;
int a = 0;
int main(void)
{
    int a = 4;
    int a;

    a += 0;

    return a;
}
